--- a/style.css
+++ b/style.css
@@ -23,14 +23,15 @@ body {
 .header {
     padding-top: 16px;
     padding-bottom: 128px;
-    padding-left: 200px;
-    padding-right: 200px;
+    padding-left: 100px;
+    padding-right: 100px;
 }
 
 .header-top {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .header-links {
@@ -48,6 +49,14 @@ body {
     font-weight: lighter;
 }
 
+.header-text {
+    max-width: 500px;
+}
+
+#header-title {
+    max-width: 300px;
+}
+
 .logo {
     font-size: 24px;
     color: #F9FAF8;
@@ -63,13 +72,15 @@ body {
 .header-bottom {
     display: flex;
     gap: 32px;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .header-bottom > img {
     width: 450px;
     height: 230px;
     background-color: grey;
-    flex: none;
+    flex-grow: 0;
 }
 
 #information-title {
@@ -138,6 +149,9 @@ body {
     justify-content: center;
     gap: 32px;
     margin-bottom: 64px;
+    flex-wrap: wrap;
+    padding-left: 100px;
+    padding-right: 100px;
 }
 
 .image {
@@ -155,18 +169,19 @@ body {
     margin: 0;
     width: 140px;
     height: 140px;
-    flex: none;
+    flex: auto;
     border: 2px solid #3882F6;
     border-radius: 10px;
 }
 
 .sign-up-container {
-    margin-left: 200px;
-    margin-right: 200px;
+    margin-left: 100px;
+    margin-right: 100px;
     display: flex;
     justify-content: space-between;
     border-radius: 4px;
     padding: 32px 128px;
+    flex-wrap: wrap;
 }
 
 .footer {
