--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ body {
     gap: 64px;
 }
 
+.container {
+    align-items: center;
+}
+
 .header,
 .footer {
     background-color: #1F2937;
@@ -177,8 +181,9 @@ body {
 .sign-up-container {
     margin-left: 100px;
     margin-right: 100px;
+    max-width: 1000px;
     display: flex;
-    justify-content: space-between;
+    gap: 32px;
     border-radius: 4px;
     padding: 32px 128px;
     flex-wrap: wrap;
