--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ body {
     width: 450px;
     height: 230px;
     background-color: grey;
-    flex-grow: 0;
+    flex: 0 1 auto;
     margin: 0;
 }
 
