--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ body {
 .header-bottom > img {
     width: 450px;
     height: 230px;
+    object-fit: cover;
     background-color: grey;
     flex: 0 1 auto;
     margin: 0;
@@ -161,8 +162,8 @@ body {
 }
 
 .image {
-    width: 150px;
-    height: 150px;
+    width: auto;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -173,10 +174,11 @@ body {
 
 .image > img {
     margin: 0;
-    width: 140px;
-    height: 140px;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
     flex: auto;
-    border: 2px solid #3882F6;
+    border: none;
     border-radius: 10px;
 }
 
