--- a/style.css
+++ b/style.css
@@ -1,204 +1,201 @@
 body {
-    font-family: Roboto, sans-serif;
-    display: flex;
-    flex-direction: column;
-    gap: 64px;
-    margin: 0;
+	font-family: Roboto, sans-serif;
+	display: flex;
+	flex-direction: column;
+	gap: 64px;
+	margin: 0;
 }
 
 .header,
 .container {
-    flex: none;
-    display: flex;
-    flex-direction: column;
-    gap: 64px;
+	flex: none;
+	display: flex;
+	flex-direction: column;
+	gap: 64px;
 }
 
 .container {
-    align-items: center;
+	align-items: center;
 }
 
 .header,
 .footer {
-    background-color: #1F2937;
-    color: white;
+	background-color: #1f2937;
+	color: white;
 }
 
 .header {
-    padding-top: 16px;
-    padding-bottom: 128px;
-    padding-left: clamp(16px, 10%, 200px);
-    padding-right: clamp(16px, 10%, 200px);
+	padding-top: 16px;
+	padding-bottom: 128px;
+	padding-left: clamp(16px, 10%, 200px);
+	padding-right: clamp(16px, 10%, 200px);
 }
 
 .header-top {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    margin: 0;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	flex-wrap: wrap;
+	margin: 0;
 }
 
 .header-links {
-    display: flex;
-    list-style-type: none; 
-    padding: 0; 
-    margin: 0;
-    gap: 16px;
+	display: flex;
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
+	gap: 16px;
 }
 
 .header-links,
 .header-text {
-    color: #E5E7EB;
-    font-size: 18px;
-    font-weight: lighter;
+	color: #e5e7eb;
+	font-size: 18px;
+	font-weight: lighter;
 }
 
 .header-text {
-    max-width: 500px;
+	max-width: 500px;
 }
 
 #header-title {
-    max-width: 300px;
+	max-width: 300px;
 }
 
 .logo {
-    font-size: 24px;
-    color: #F9FAF8;
+	font-size: 24px;
+	color: #f9faf8;
 }
 
 #header-title {
-    font-size: 48px;
-    font-weight: bolder;
-    line-height: 1em;
-    margin-bottom: -16px;
+	font-size: 48px;
+	font-weight: bolder;
+	line-height: 1em;
+	margin-bottom: -16px;
 }
 
 .header-bottom {
-    display: flex;
-    gap: 32px;
-    flex-wrap: wrap;
-    justify-content: space-between;
+	display: flex;
+	gap: 32px;
+	flex-wrap: wrap;
+	justify-content: space-between;
 }
 
 .header-bottom > img {
-    width: 450px;
-    height: 230px;
-    object-fit: cover;
-    background-color: grey;
-    flex: 0 1 auto;
-    margin: 0;
+	width: 450px;
+	height: 230px;
+	object-fit: cover;
+	background-color: grey;
+	flex: 0 1 auto;
+	margin: 0;
 }
 
 #information-title {
-    font-size: 36px;
-    font-weight: bolder;
+	font-size: 36px;
+	font-weight: bolder;
 }
 
 .quote-container {
-    background-color: #E5E7EB;
-    padding: 96px clamp(16px, 20%, 400px);
+	background-color: #e5e7eb;
+	padding: 96px clamp(16px, 20%, 400px);
 }
 
 .quote-author {
-    text-align: right;
-    font-weight: bold;
+	text-align: right;
+	font-weight: bold;
 }
 
 .quote {
-    font-size: 28px;
-    font-weight: lighter;
-    font-style: italic;
-    color: #1F2937;
+	font-size: 28px;
+	font-weight: lighter;
+	font-style: italic;
+	color: #1f2937;
 }
 
 .header-sign-up {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
+	display: flex;
+	flex-direction: column;
+	gap: 16px;
 }
-
 
 .sign-up-button,
 #header-sign-up-button {
-    padding: 8px 24px;
-    background-color: #3882F6;
-    color: white;
-    border: 2px solid white;
-    border-radius: 8px;
-    box-shadow: none;
+	padding: 8px 24px;
+	background-color: #3882f6;
+	color: white;
+	border: 2px solid white;
+	border-radius: 8px;
+	box-shadow: none;
 }
 
 #header-sign-up-button {
-    border-color: #3882F6;
-    margin-right: auto;
+	border-color: #3882f6;
+	margin-right: auto;
 }
 
 .sign-up-container {
-    background-color: #3882F6;
-    color: white;
+	background-color: #3882f6;
+	color: white;
 }
 
 .sign-up-container {
-    display: flex;
+	display: flex;
 }
 
 #information-title {
-    text-align: center;
+	text-align: center;
 }
 
 .sign-up-title {
-    font-weight: bold;
+	font-weight: bold;
 }
 
 .image-container {
-    display: flex;
-    justify-content: center;
-    gap: 32px;
-    margin-bottom: 64px;
-    flex-wrap: wrap;
-    padding-left: clamp(16px, 10%, 200px);
-    padding-right: clamp(16px, 10%, 200px);
+	display: flex;
+	justify-content: center;
+	gap: 32px;
+	margin-bottom: 64px;
+	flex-wrap: wrap;
+	padding-left: clamp(16px, 10%, 200px);
+	padding-right: clamp(16px, 10%, 200px);
 }
 
 .image {
-    width: auto;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    font-weight: lighter;
+	width: auto;
+	height: auto;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	font-weight: lighter;
 }
 
-
 .image > img {
-    margin: 0;
-    width: 200px;
-    height: 200px;
-    object-fit: cover;
-    flex: auto;
-    border: none;
-    border-radius: 10px;
+	margin: 0;
+	width: 200px;
+	height: 200px;
+	object-fit: cover;
+	flex: auto;
+	border: none;
+	border-radius: 10px;
 }
 
 .sign-up-container {
-    margin-left: 32px;
-    margin-right: 32px;
-    max-width: 1000px;
-    display: flex;
-    gap: 32px;
-    border-radius: 4px;
-    padding: 32px clamp(16px, 10%, 128px);
-    flex-wrap: wrap;
+	margin-left: 32px;
+	margin-right: 32px;
+	max-width: 1000px;
+	display: flex;
+	gap: 32px;
+	border-radius: 4px;
+	padding: 32px clamp(16px, 10%, 128px);
+	flex-wrap: wrap;
 }
 
 .footer {
-    flex: none;
-    margin-top: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 16px;
+	flex: none;
+	margin-top: auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 16px;
 }
-
